# src/routes/v1/addresses.routes.js
@@ -1,11 +1,21 @@
 const express = require('express');
 
 const AddressController = require('../../controllers/AddressController');
-const { onlyCanAccessWith } = require('../../middlewares/auth')
+const { onlyCanAccessWith } = require('../../middlewares/auth');
 const permission = require('../../utils/constants/permissions');
+const { DELETE } = require('../../utils/constants/permissions');
 
 const addressesRoutes = express.Router();
 
-addressesRoutes.get('/address', onlyCanAccessWith([permission.READ]), AddressController.index);
+addressesRoutes.get(
+  '/address',
+  onlyCanAccessWith([permission.READ]),
+  AddressController.index
+);
+addressesRoutes.delete(
+  '/address/:address_id',
+  onlyCanAccessWith([DELETE]),
+  AddressController.delete
+);
 
 module.exports = addressesRoutes;
